testing to show image on a div because on button it wont show

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <body>
     <main class="container">
       <div class="open" id="open">
-        <button type="button" id="openBtn" class="btn btn--open">
-          Otvori me!
-        </button>
+        <div id="openBtn" class="btn btn--open">Otvori me!</div>
       </div>
 
       <div class="question" id="question">
