made changes for openButton

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <main class="container">
       <div class="open" id="open">
-        <div id="openBtn" class="btn btn--open">Otvori me!</div>
+        <div id="openBtn" class="btn btn--open"></div>
       </div>
 
       <div class="question" id="question">
