--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </audio>
         <img
           class="milk-mocha-bear"
-          src="assets/img/milk_mocha_bear.gif"
+          src="https://i.ibb.co/znhXXHr/milk-mocha-bear.gif"
           alt="Milk and Mocha Bear"
         />
         <p class="title">Hoćeš li biti moje Valentinovo?</p>
