added pulsing heart

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>The Secret</title>
+    <title>Valentinovo ❤️</title>
   </head>
   <body>
     <main class="container">
+      <div class="pulsing-3"></div>
       <div class="open" id="open">
-        <div id="openBtn" class="btn btn--open"></div>
+        <button id="openBtn" class="btn btn--open"></button>
       </div>
 
       <div class="question" id="question">
